[package]
name = "rust-bitfield"
version = "0.1.0"
authors = ["Varphone Wong <varphone@qq.com>"]
description = """
This crate provides macros to generate bitfield-like struct.
"""
repository = "https://github.com/varphone/rust-bitfield"
documentation = "https://docs.rs/rust-bitfield"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
